# Vibe

./: .env  .gitignore  .webpack.config.js  README.md  bundling.js  index.js  main.js  package-lock.json  package.json  preload.js  tsconfig.json
assets/: icon.icns
mpv/mac/: libavdevice.58.dylib  libavfilter.7.dylib  libavformat.58.dylib  libavutil.56.dylib  libjpeg.9.dylib  libogg.0.dylib  libopus.0.dylib  libswresample.3.dylib  libswscale.5.dylib  libtheoradec.1.dylib  libtheoraenc.1.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib  libx264.155.dylib  mpvjs.node
public/: completed-series.json  index.html  manifest.json
public/data/: completed-series.json  index.html  main.js  merge.js  merged.json  mergedV2.json  new.json  onepiece.js  package-lock.json  package.json  prepare.js  reaction.json  rename_episodes.js  temp.json  trimmed-desktop.json  trimmed.json
server/: .gitignore  app.js  cached.json  client_secret.json  data.json  package-lock.json  server.bundle.js  server.js  store.json  utils.js
server/.credentials2/: googleDriveAPI.json
src/: App.css  App.js  App.tsx  index.css  index.js  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: add_page.tsx  appbar.js  audio.tsx  autocomplete.tsx  completed-series.json  container.tsx  darkmode.tsx  dialog.js  download.js  download.tsx  download_item.tsx  drive.js  drive.tsx  duration.tsx  episode.js  episodelist.js  episodelist.tsx  favourite_btn.tsx  favourites.js  favourites.tsx  flashplayer.js  flashplayer.tsx  fullscreen.tsx  history.js  history.tsx  (+29 more)
(+294 files in other folders)
